Closed Bug 797111 Opened 12 years ago Closed 12 years ago

GCC 4.7 opt build warning: ipc/glue/SyncChannel.cpp:91:13: warning: unused variable 'msgSeqno' [-Wunused-variable]

Categories

(Core :: IPC, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

GCC 4.7 opt build warning: { ipc/glue/SyncChannel.cpp:91:13: warning: unused variable 'msgSeqno' [-Wunused-variable] } Looks like we only check this variable in an NS_ABORT_IF_FALSE statement, so it's unused in opt builds. So, it should be declared as DebugOnly<>.
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #667142 - Flags: review?(jones.chris.g)
Attachment #667142 - Flags: review?(jones.chris.g) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: