Bug 797111: Mark variable 'msgSeqno' as DebugOnly, in SyncChannel::Send, to fix opt build warning. r=cjones