ipc/glue/SyncChannel.cpp
@@ -6,6 +6,7 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 #include "mozilla/ipc/SyncChannel.h"
+#include "mozilla/Util.h"
 
 #include "nsDebug.h"
 #include "nsTraceRefcnt.h"
@@ -88,7 +89,7 @@ SyncChannel::Send(Message* _msg, Message* reply)
     }
 
     mPendingReply = msg->type() + 1;
-    int32_t msgSeqno = msg->seqno();
+    DebugOnly<int32_t> msgSeqno = msg->seqno();
     mLink->SendMessage(msg.forget());
 
     while (1) {
